--- a/styles/app.css
+++ b/styles/app.css
@@ -1,3 +1,11 @@
 body{
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font: inherit;
+    border: 0;
+    font-size: 40px;
+    font-weight: bold;
     background-color: #444;
+    color : #fff
 }
