--- a/components/button.module.css
+++ b/components/button.module.css
@@ -1,4 +1,6 @@
 .button {
-    background-color:blue;
-    color: #fff
+  background-color: transparent;
+  cursor: pointer;
 }
+
+/*# sourceMappingURL=button.module.css.map */
