--- a/styles/app.css
+++ b/styles/app.css
@@ -1,11 +1,11 @@
-body{
-    margin: 0;
-    padding: 0;
-    box-sizing: border-box;
-    font: inherit;
-    border: 0;
-    font-size: 40px;
-    font-weight: bold;
-    background-color: #444;
-    color : #fff
+html {
+  font-size: 15px;
 }
+
+body {
+  background-color: var(--c-bg-primary);
+  font-size: 1rem;
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+}
+
+/*# sourceMappingURL=app.css.map */
