--- a/components/menuButton.module.css
+++ b/components/menuButton.module.css
@@ -1,9 +1,11 @@
 .menuButton {
+  position: relative;
   color: var(--c-text-primary);
   padding: 10px;
   border-radius: 99px;
   display: flex;
   align-items: center;
+  transition: var(--fade);
 }
 .menuButton svg {
   font-size: 26px;
@@ -14,6 +16,27 @@
 }
 .menuButton:hover {
   background-color: var(--c-button-color-20);
+  color: var(--c-template);
+}
+
+.selectedMenuButton {
+  color: var(--c-template);
+}
+
+.notify {
+  position: absolute;
+  background-color: var(--c-template);
+  color: var(--c-text-primary);
+  top: 5px;
+  left: 20px;
+  border-radius: 16px;
+  padding-left: 5px;
+  padding-right: 5px;
+  height: 16px;
+  display: flex;
+  align-items: center;
+  font-size: 11px;
+  border: 1px solid var(--c-bg-primary);
 }
 
 /*# sourceMappingURL=menuButton.module.css.map */
