--- a/styles/styles.scss
+++ b/styles/styles.scss
@@ -6,3 +6,12 @@
 body {
 	background-color: var(--c-bg-primary);
 }
+
+.Icon {
+	color: var(--c-text-primary);
+	font-size: 30px;
+	display: grid;
+	grid-template-columns: repeat(10, 1fr);
+	grid-gap: 20px;
+	padding: 20px;
+}
