--- a/components/button.module.css
+++ b/components/button.module.css
@@ -1,6 +1,23 @@
 .button {
   background-color: transparent;
   cursor: pointer;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  color: var(--c-text-primary);
+  transition: var(--fade);
+}
+.button:hover {
+  background-color: var(--c-button-color-20);
+  color: var(--c-template);
+}
+
+.fullWidth {
+  width: 100% !important;
+}
+
+.big {
+  height: 48px;
 }
 
 /*# sourceMappingURL=button.module.css.map */
