--- a/components/textBold.module.css
+++ b/components/textBold.module.css
@@ -1,7 +1,11 @@
 .textBold {
+	display: block;
 	font-size: 19px;
 	font-weight: bold;
+	color: var(--c-text-primary);
 }
 .textRegular {
-	font-weight: 19px;
+	display: block;
+	font-size: 19px;
+	color: var(--c-text-primary);
 }
