--- a/components/col-sidebar.module.css
+++ b/components/col-sidebar.module.css
@@ -1,5 +1,10 @@
 .sidebar {
 	position: relative;
 	width: 275px;
-	margin-right: 10px;
+	padding-right: 40px;
+	display: flex;
+	flex-direction: column;
+}
+.profile {
+	margin-top: auto;
 }
