--- a/components/col-sidebar.module.css
+++ b/components/col-sidebar.module.css
@@ -1,9 +1,12 @@
 .sidebar {
 	position: relative;
-	width: 275px;
 	padding-right: 40px;
+	padding-left: 16px;
 	display: flex;
 	flex-direction: column;
+}
+.tweet {
+	margin-top: 20px;
 }
 .profile {
 	margin-top: auto;
