--- a/components/themeButton.module.css
+++ b/components/themeButton.module.css
@@ -1,13 +1,14 @@
 .themeButton {
-  background-color: var(--c-template);
-  padding-left: 28px;
-  padding-right: 28px;
-  font-size: 19px;
-  width: 118px;
+	background-color: var(--c-template);
 }
 .themeButton:hover {
-  background-color: var(--c-template);
-  color: var(--c-text-primary);
+	background-color: var(--c-template);
+	color: var(--c-text-primary);
 }
 
-/*# sourceMappingURL=themeButton.module.css.map */
+@media screen and (max-width: 1240px) {
+	.themeButton {
+		width: 46px;
+		height: 46px;
+	}
+}
