--- a/styles/app.scss
+++ b/styles/app.scss
@@ -9,6 +9,7 @@ html {
 }
 
 body {
+	color: var(--c-text-primary);
 	font-size: 1rem;
 	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
 		Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
