--- a/components/button.module.css
+++ b/components/button.module.css
@@ -9,6 +9,7 @@
 	transition: var(--fade);
 	border-radius: 99px;
 	outline: none;
+	text-decoration: none;
 }
 .button:hover {
 	background-color: var(--c-button-color-20);
