--- a/components/col-main.module.css
+++ b/components/col-main.module.css
@@ -1,5 +1,8 @@
 .main {
-	background-color: #cdc;
 	flex: 1;
 	max-width: 600px;
+	border-width: 1px;
+	border-style: solid;
+	border-color: var(--c-border-color);
+	border: 0, 1px;
 }
