--- a/components/col-sidebar.module.css
+++ b/components/col-sidebar.module.css
@@ -1,9 +1,10 @@
 .sidebar {
 	position: relative;
-	padding-right: 40px;
-	padding-left: 16px;
+	padding-right: 12px;
+	padding-left: 12px;
 	display: flex;
 	flex-direction: column;
+	width: 251px;
 }
 .tweet {
 	margin-top: 20px;
