--- a/components/nav.module.css
+++ b/components/nav.module.css
@@ -3,12 +3,15 @@
 	flex-direction: column;
 	align-items: flex-start;
 }
-.nav button + button {
+.nav a + a {
 	margin-top: 8px;
 }
 .text {
 	margin-left: 20px;
 	margin-right: 15px;
+}
+.selectedText {
+	color: var(--c-template);
 }
 
 /*# sourceMappingURL=nav.module.css.map */
