--- a/styles/app.css
+++ b/styles/app.css
@@ -1,18 +1,15 @@
 * {
-  margin: 0;
-  padding: 0;
-  border: 0;
-  box-sizing: border-box;
+	margin: 0;
+	padding: 0;
+	border: 0;
 }
 
 html {
-  font-size: 15px;
+	font-size: 15px;
 }
 
 body {
-  color: var(--c-text-primary);
-  font-size: 1rem;
-  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
+	font-size: 1rem;
+	font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Helvetica,
+		Arial, sans-serif, 'Apple Color Emoji', 'Segoe UI Emoji', 'Segoe UI Symbol';
 }
-
-/*# sourceMappingURL=app.css.map */
