added: dark dim and light theme

--- a/components/themeButton.module.css
+++ b/components/themeButton.module.css
@@ -1,6 +1,9 @@
 .themeButton {
 	background-color: var(--c-template);
 }
+.themeButton * {
+	color: #fff;
+}
 
 .themeButton:hover {
 	background-color: var(--c-template);
