--- a/components/nav.module.css
+++ b/components/nav.module.css
@@ -3,6 +3,10 @@
 	flex-direction: column;
 	align-items: flex-start;
 }
+.nav a:global(.Twitter) {
+	color: var(--c-template);
+}
+
 .nav a + a {
 	margin-top: 8px;
 }
