--- a/components/col-sidebar.module.css
+++ b/components/col-sidebar.module.css
@@ -3,8 +3,9 @@
 	padding-right: 12px;
 	padding-left: 12px;
 	display: flex;
+
 	flex-direction: column;
-	width: 251px;
+	max-width: 251px;
 }
 .tweet {
 	margin-top: 20px;
