--- a/components/Layout/colMain.module.css
+++ b/components/Layout/colMain.module.css
@@ -1,8 +1,7 @@
 .main {
 	flex: 1;
 	max-width: 600px;
-	border-width: 1px;
 	border-style: solid;
 	border-color: var(--c-border-color);
-	border: 0, 1px;
+	border-width: 0 1px;
 }
