--- a/components/ProfileBox/photo.module.css
+++ b/components/ProfileBox/photo.module.css
@@ -1,9 +1,10 @@
 .photo {
 	width: 40px;
+	height: 40px;
 	flex-shrink: 0;
 }
 
 .img {
 	width: 100%;
-	border-radius: 99px;
+	border-radius: 40px;
 }
