--- a/components/Tweet/tweet.module.css
+++ b/components/Tweet/tweet.module.css
@@ -12,15 +12,14 @@
 	grid-area: body;
 	font-size: 15px;
 	text-align: justify;
-	div + div {
-		padding-top: 8px;
-	}
 }
-.header {
-	span + span {
-		padding-left: 8px;
-		color: var(--c-text-secondary);
-	}
+.body div + div {
+	padding-top: 8px;
+}
+
+.header span + span {
+	padding-left: 8px;
+	color: var(--c-text-secondary);
 }
 .tweetBody {
 	white-space: pre-wrap;
@@ -35,9 +34,9 @@
 	flex: 1;
 	font-size: 19px;
 	color: var(--c-text-secondary);
-	> span {
-		font-size: 0.8em;
-	}
+}
+.footerButton > span {
+	font-size: 0.8em;
 }
 .actions {
 	color: inherit;
@@ -45,8 +44,8 @@
 
 .container {
 	width: 100%;
-	img {
-		width: 100%;
-		object-fit: contain;
-	}
+}
+.container img {
+	width: 100%;
+	object-fit: contain;
 }
