--- a/styles/variables.css
+++ b/styles/variables.css
@@ -7,6 +7,8 @@
 	--c-border-color: #2f3336;
 	--c-text-secondary: #5b7083;
 	--c-text-primary: #ffffff;
+	--c-shadow1: #fff3 0px 0px 15px;
+	--c-shadow2: #ffffff26 0px 0px 3px 1px;
 	--fade: 120ms;
 }
 
@@ -17,6 +19,8 @@
 	--c-template: #1da1f2;
 	--c-border-color: #ebeef0;
 	--c-text-primary: #000;
+	--c-shadow1: #0003 0px 0px 15px;
+	--c-shadow2: #00000026 0px 0px 3px 1px;
 }
 
 .dim:root {
