--- a/components/ProfileBox/profileBox.module.css
+++ b/components/ProfileBox/profileBox.module.css
@@ -1,10 +1,10 @@
 .box {
+	width: 251px;
 }
-.modal {
-}
+
 .body {
 	font-size: 15px;
-	margin-left: 10px;
+	padding-left: 10px;
 	text-align: left;
 }
 
