--- a/components/Sidebar/nav.module.css
+++ b/components/Sidebar/nav.module.css
@@ -15,4 +15,11 @@
 	color: var(--c-template);
 }
 
-/*# sourceMappingURL=nav.module.css.map */
+@media screen and (max-height: 610px) {
+	.nav a:nth-child(6) {
+		display: none;
+	}
+	.nav a:nth-child(7) {
+		display: none;
+	}
+}
