--- a/components/Tweet/tweet.module.css
+++ b/components/Tweet/tweet.module.css
@@ -3,10 +3,15 @@
 	display: grid;
 	grid-template-areas: 'avatar body';
 	grid-template-columns: 50px 1fr;
+	grid-gap: 10px;
 	border-bottom: 1px solid var(--c-border-color);
 }
-.avatar {
+.avatarCover {
 	grid-area: avatar;
+}
+.avatar {
+	width: 48px;
+	height: 48px;
 }
 .body {
 	grid-area: body;
