--- a/components/modal/ProfileModal.module.css
+++ b/components/modal/ProfileModal.module.css
@@ -28,6 +28,7 @@
 	text-align: inherit;
 	width: 100%;
 	padding: 15px 10px;
+	justify-content: flex-start;
 }
 .button:hover {
 	background-color: var(--c-border-color);
