--- a/components/ProfileSettings/profileCard.module.css
+++ b/components/ProfileSettings/profileCard.module.css
@@ -14,7 +14,7 @@
 	position: absolute;
 	top: 150px;
 	border-radius: 99px;
-	border: 2px solid var(--c-bg-primary);
+	border: 2px solid var(--c-text-primary);
 	margin-left: 15px;
 }
 .body {
